--- a/src/style/_blocks/footer.scss
+++ b/src/style/_blocks/footer.scss
@@ -9,13 +9,16 @@
  
 
   &__container  {
-   
     padding-top: rem(30px);
     padding-bottom: rem(30px);
- 
     max-width: rem(1400px);
     margin-left: auto;
     margin-right: auto;
+
+    @include mobile {
+      padding-top: rem(15px);
+      padding-bottom: rem(15px);
+    }
   }
 
   &__list {
@@ -23,13 +26,27 @@
     padding-left: rem(145px);
     width: 100%;
     justify-content: flex-start;
+
+    @include mobile {
+      padding-left: rem(16px);
+      padding-right: rem(16px);
+      flex-direction: column;
+    }
   }
 
   &__item {
     margin-right: rem(36px);
+    font-size: rem(18px);
+    line-height: 110%;
 
     &:last-child {
       margin-right: 0;
+    }
+
+    @include mobile {
+      margin-right: 0;
+      margin-bottom: rem(6px);
+      font-size: rem(12px);
     }
   }
 }
